tests/ui/tuple_struct.stderr
error: proc-macro derive panicked
  --> $DIR/tuple_struct.rs:13:10
   |
13 | #[derive(StructOpt, Debug)]
   |          ^^^^^^^^^
   |
   = help: message: structopt only supports non-tuple structs and enums
